Thu Dec 25 12:44:27 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_yield_with_cfunc): check block has Proc.

Thu Dec 25 05:53:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/id.h.tmpl, id.h (ruby_method_ids): not depend on if
	  token are defined as macros.  [ruby-dev:37553]

	* template/id.h.tmpl, id.h (ruby_method_ids_check): enclosed in a
	  struct.

Thu Dec 25 01:52:34 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): sets native thread key.

Thu Dec 25 01:09:23 2008  TAKAO Kouji  <kouji@takao7.net>

	* test/readline/test_readline_history.rb: check the encoding that
	  is in the Readline::HISTORY.

Wed Dec 24 22:36:06 2008  Koichi Sasada  <ko1@atdot.net>

	* error.c, vm_dump.c: change message by rb_bug().

Wed Dec 24 21:57:39 2008  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_peephole_optimize): fix typo.

Sun Dec 21 13:38:04 2008  Koichi Sasada  <ko1@atdot.net>

	* vm.c (invoke_block_from_c): fix to point right cfp.

	* vm.c (vm_make_proc, vm_make_proc_from_block), vm_core.h:
	  remove unused parameter cfp.

	* vm_insnhelper.c, proc.c (proc_new): ditto.

Wed Dec 24 20:59:12 2008  Koichi Sasada  <ko1@atdot.net>

	* error.c (exc_equal): == method should not raise Exception.
	  [ruby-dev:37519]

	* sample/test.rb: fix test

Fri Dec 19 07:45:37 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* error.c (exc_equal): duck typing equal to make it transitive.
	  [ruby-dev:34880]

Wed Dec 24 20:33:45 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method): use class of method defined
	  instead of receiver's class on bmethod.  fixes [ruby-core:20786]

	* bootstraptest/test_method.rb: add a test for above.

	* vm_insnhelper.c (vm_setup_method): remove unused parameter klass.

	* vm_insnhelper.h (CALL_METHOD): ditto.

	* insns.def, vm_eval.c: ditto.

Wed Dec 24 20:15:50 2008  Koichi Sasada  <ko1@atdot.net>

	* tool/file2lastrev.rb (get_revisions): fix to ignore end of line.
